<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notification_access_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/lastUpdateHeader"
        android:gravity="left"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:text="@string/notifications_settings_header"
        android:textColor="@color/headerTextBg"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/notification_access_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification_access_header"
        android:gravity="left"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:text="@string/notifications_settings_explanations"
        android:textColor="@color/goToPermissionsTextColor"
        android:textStyle="normal" />

    <RelativeLayout
        android:id="@+id/go_to_nottification_access_setting"
        android:layout_below="@+id/notification_access_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button_selector"
        android:gravity="center">

        <TextView
            android:id="@+id/go_to_nottification_access_setting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_nottification_access_button_text"
            android:textColor="@color/goToPermissionsTextColor"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/permitions_access_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lastUpdateHeader"
        android:layout_below="@+id/go_to_nottification_access_setting"
        android:gravity="left"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:layout_marginTop="12dp"
        android:text="@string/permissions_settings_header"
        android:textColor="@color/headerTextBg"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/permissions_access_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/permitions_access_header"
        android:gravity="left"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:text="@string/permission_explanations"
        android:textColor="@color/goToPermissionsTextColor"
        android:textStyle="normal" />

    <RelativeLayout
        android:id="@+id/go_to_permissions_setting"
        android:layout_below="@+id/permissions_access_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button_selector"
        android:gravity="center">

        <TextView
            android:id="@+id/go_to_permissions_setting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpermission_access_button_text"
            android:textColor="@color/goToPermissionsTextColor"/>

    </RelativeLayout>

</RelativeLayout>